--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/export/authors
+/db/export/comments
+/db/export/stories
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
